<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
      android:background="@android:color/white"
    android:orientation="vertical" >
  
      <RelativeLayout
          android:layout_width="fill_parent"
          android:layout_height="50dp"
          android:background="#AA823C"
          >
          <ImageView
              android:id="@+id/about_back"
              android:layout_width="50dp"
              android:layout_height="wrap_content"
              android:src="@drawable/back" />
          <TextView              
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerInParent="true"
              android:text="@string/about_top"
              android:textColor="#FFFFFF"
              android:textSize="16sp" />

        
      </RelativeLayout>

     <ScrollView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          >
          
     
      <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="10dp"
          >
           <TextView 
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"          
             android:text="@string/about_about"           
          />
          <TextView 
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"          
             android:text="@string/abour_about2" 
             android:layout_marginTop="10dp"          
          />
          <TextView 
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"          
             android:text="@string/abour_about3" 
             android:layout_marginTop="3dp"          
          />
          <TextView 
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"          
             android:text="@string/abour_about4" 
             android:layout_marginTop="3dp"          
          />
          <TextView 
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"          
             android:text="@string/abour_about5" 
             android:layout_marginTop="3dp"          
          />
          <TextView 
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"          
             android:text="@string/abour_about6" 
             android:layout_marginTop="3dp"          
          />
          <TextView 
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"          
             android:text="@string/abour_about7" 
             android:layout_marginTop="3dp"          
          />
          <TextView 
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"          
             android:text="@string/abour_about8" 
             android:layout_marginTop="3dp"          
          />
          <TextView 
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"          
             android:text="@string/abour_about9" 
             android:layout_marginTop="15dp"          
          />
      </LinearLayout>
    </ScrollView>
</LinearLayout>