<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="50dp"
	    android:padding="15dp"
	    android:background="#f2f1ef"	  
	    android:orientation="vertical"
	    >
    <TextView 
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" 
          android:text="@string/share"
          android:textSize="15sp"
          android:textColor="#C50000"
        />
    </LinearLayout>
    
    <View  
       android:layout_height="1dp" 
       android:background="#A0A0A0"       
       android:layout_width="fill_parent"
       ></View>     
    
      <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="50dp"
        android:paddingBottom="30dp"
        >
           <ImageView
	        android:layout_width= "wrap_content"
	        android:layout_height= "wrap_content"
	        android:src= "@drawable/launch_dongfeng"
	        />
        
           <LinearLayout 
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:paddingLeft="8dp"
	      
            >
              <TextView
                      android:id="@+id/lauch_dongfeng"
                      android:layout_width= "wrap_content"
                      android:layout_height= "wrap_content"
                      android:textColor= "#8E8E8E"
                      android:textSize= "28sp"                    
                      android:text= "@string/lauch_dongfeng"
                        />
               
                   <TextView
                      android:id="@+id/lauch_platform"
                      android:layout_width= "fill_parent"
                      android:layout_height= "wrap_content"
                      android:textColor= "#8E8E8E"
                      android:textSize ="9sp" 
                      android:paddingTop="1dp"           
                      android:text= "@string/lauch_platform"
                        />
            
                  </LinearLayout>
    
                     <TextView
	                      android:id="@+id/lauch_phone"
	                      android:layout_width= "wrap_content"
	                      android:layout_height= "wrap_content"
	                      android:textColor= "#8E8E8E"
	                      android:textSize= "12sp"
	                      android:paddingLeft="8dp"
	                      android:paddingTop="18dp"
	                      android:text= "@string/lauch_phone"
                      />
        
   </LinearLayout>
   
      <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="50dp"
        android:paddingBottom="30dp"
        >
      <ImageView 
          android:layout_width= "wrap_content"
	      android:layout_height= "wrap_content"    
         
          />
      
      <TextView 
          android:layout_width= "wrap_content"
	      android:layout_height= "wrap_content"
          android:text="@string/share_code"
          />
      </LinearLayout>
   
</LinearLayout>
